gitops/apps/environments/dev/patches/pgadmin/pgadmin-vault-secret.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  template:
    spec:
      containers:
        - name: pgadmin
