gitops/apps/environments/dev/patches/pgadmin/pgadmin-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin-ingress
spec:
  rules:
    - host: pgadmin-dev.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pgadmin
                port:
                  number: 80
  tls:
    - hosts:
        - pgadmin-dev.home
      secretName: pgadmin-dev-tls-cert
